fix: expose bishop protection accessor and correct AI Warlord logic
- Add isBishopProtected(Player) in CitadelsGame for querying protection
- Update AIPlayer.warlordTurn to use isBishopProtected instead of inaccessible method
- Refine victim selection comparator for destroyable districts